--- a/style/style.css
+++ b/style/style.css
@@ -3,5 +3,6 @@
 @import url(./footer.css);
 @import url(./main.css);
 @import url(./global.css);
+@import url(./login.css);
 
 /* importamos todas las hojas de estilo */
