--- a/style/login.css
+++ b/style/login.css
@@ -1,6 +1,17 @@
-.login {
-    padding: 1rem;
+.login-main{
+    max-width: 20%;
+    margin: auto;
+    min-width: 300px;
+    margin-top: 15%;
 }
+
+.login {
+    display: flex;
+    flex-direction: column; 
+    padding: 1rem;
+    align-items: center;   
+}
+
 
 .login h1 {
     margin-bottom: 1rem;
@@ -10,7 +21,7 @@
 .login input {
     margin-top: 0.5rem;
     margin-bottom: 1rem;
-    width: 20%;
+    width: 100%;
     height: 30px;        
     font-size: 0.8rem;
     background-color: #FFEA79; 
@@ -20,5 +31,12 @@
 }
 
 .login input:last-child{
-    width: 10%;
+    width: 50%;
+    font-family: "Press Start 2P", system-ui;
+    color: #333;
+    font-size: 0.6rem;
+}
+
+.login input:last-child:hover{
+    border: 2px solid #333;
 }
