--- a/style/main.css
+++ b/style/main.css
@@ -19,14 +19,22 @@ main {
     margin-bottom: 1rem;
 }
 
-span {
-    color: #FFEA79;
-}
-
 .imagen {
     margin-right: 1rem;
     max-width: 500px;
     width: 70%;
+}
+
+.ficha{
+    font-size: 0.9rem;
+}
+
+.ficha p{
+    margin-bottom: 0.5rem;
+}
+
+.ficha span{
+    color: #FFEA79;
 }
 
 .bajo {
@@ -49,25 +57,32 @@ span {
     overflow-y: auto;      
 }
 
+.botones{
+    padding: 1rem;
+    padding-top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
 .accion {
     display: flex;
-    padding: 1rem;
-    padding-top: 0rem;
-    margin: auto;
-    justify-content: center;
+    justify-content: start;
+    gap: 0.6rem;
 }
 
 .accion button {
     font-family: "Press Start 2P", system-ui;
+    color: #333;
     border-radius: 4px;
-    border: 2px solid #ccc; /* ponemos un borde  */
-    padding: 0.5rem;
+    border: 2px solid #ccc;
+    padding: 0.5rem 1rem;
     background-color: #FFEA79;
     font-size: 0.8rem;
-    width: 30%;
-    max-width: 250px;
-    margin-right: 1.5rem;
+    white-space: nowrap; 
 }
+
 
 .accion button:last-child{
     margin-right: 0; /* quitamos el margen para el ultimo boton  */
@@ -76,3 +91,19 @@ span {
 .accion button:hover {
     border: 2px solid #333; /* ponemos un borde con un color diferente */
 }
+
+.icon-bar {
+    display: flex;
+    justify-content: space-between;
+}
+
+.icon {
+    max-width: 30px;
+    width: 20%;
+    
+}
+
+.icon:last-child{
+    margin-right: 0px;
+}
+
