--- a/style/login.css
+++ b/style/login.css
@@ -19,6 +19,7 @@
 }
 
 .login input {
+    font-family: "Press Start 2P", system-ui;
     margin-top: 0.5rem;
     margin-bottom: 1rem;
     width: 100%;
