--- a/style/main.css
+++ b/style/main.css
@@ -145,10 +145,8 @@ row3{
     justify-content: space-between;
 }
 
-.icon {
-    max-width: 30px;
-    width: 20%;
-    
+.botones img {
+    max-width: 20px;
 }
 
 .icon:last-child{
