--- a/style/main.css
+++ b/style/main.css
@@ -6,7 +6,7 @@ main {
 .content{
     border: 2px solid #ccc; /* ponemos un borde  */
     border-radius: 4px; 
-    margin: 7rem auto 1rem auto;
+    margin: 6rem auto 1rem auto;
     width: 90%; 
     max-width: 50rem;
 }
@@ -94,9 +94,10 @@ row3{
 }
 
 .bajo textarea {
+    font-family: "Press Start 2P", system-ui;
     width: 100%;
     height: 80px;        
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     background-color: #FFEA79; 
     border: 2px solid #ccc; /* ponemos un borde  */
     border-radius: 4px;
@@ -145,15 +146,35 @@ row3{
     justify-content: space-between;
 }
 
+.botones a{
+    margin-right: 0.5rem;
+}
+
+.botones a:last-child{
+    margin-right: 0;
+}
+
 .botones img {
     max-width: 20px;
 }
 
-.icon:last-child{
-    margin-right: 0px;
+.icon-btn .hover {
+    display: none;
+}
+
+.icon-btn:hover .normal {
+    display: none;
+}
+
+.icon-btn:hover .hover {
+    display: block;
 }
 
 @media (max-width: 768px) {
+    .content{
+        margin-top: 5rem;
+    }
+
     .derecho h3{
         font-size: 0.9rem;
     }
