--- a/style/main.css
+++ b/style/main.css
@@ -23,6 +23,7 @@ main {
 .imagen {
     margin-right: 1rem;
     max-width: 500px;
+    height: 70%;
     width: 70%;
 }
 
@@ -60,7 +61,7 @@ main {
     margin-bottom: 0.5rem;
 }
 
-row3{
+.row3{
     margin-bottom: 0;
 }
 
@@ -87,6 +88,17 @@ row3{
 
 .bajo {
     padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.bajo-left{
+    width: 70%;
+    max-width: 500px;
+}
+
+.bajo-right{
+    width: 30%;
 }
 
 .bajo h2 {
@@ -155,7 +167,7 @@ row3{
 }
 
 .botones img {
-    max-width: 20px;
+    max-width: 25px;
 }
 
 .icon-btn .hover {
@@ -202,6 +214,10 @@ row3{
     .content h2 {
         font-size: 0.9rem;
         margin-bottom: 0.3rem;
+    }
+
+    .botones img {
+        max-width: 15px;
     }
 }
 
