--- a/style/style.css
+++ b/style/style.css
@@ -4,5 +4,6 @@
 @import url(./main.css);
 @import url(./global.css);
 @import url(./login.css);
+@import url(./inicio.css);
 
 /* importamos todas las hojas de estilo */
