--- a/style/main.css
+++ b/style/main.css
@@ -21,6 +21,7 @@ main {
 }
 
 .imagen {
+    border: 2px solid #ccc;
     margin-right: 1rem;
     max-width: 500px;
     height: 70%;
@@ -33,6 +34,7 @@ main {
 
 .ficha{
     font-size: 0.9rem;
+    margin-bottom: 1.5rem;
 }
 
 .ficha p{
@@ -42,6 +44,10 @@ main {
 
 .ficha span{
     color: #FFEA79;
+}
+
+.map{
+    max-width: 100px;
 }
 
 .controladores {
@@ -98,7 +104,7 @@ main {
 }
 
 .bajo-right{
-    width: 30%;
+    width: 32%;
 }
 
 .bajo h2 {
@@ -126,6 +132,17 @@ main {
     align-items: center;
 }
 
+.botones-left{
+    display: flex;
+    width: 70%;
+    max-width: 500px;
+}
+
+.botones-right{
+    display: flex;
+    justify-content: center;
+    width: 32%;
+}
 
 .accion {
     display: flex;
@@ -183,6 +200,7 @@ main {
 }
 
 @media (max-width: 768px) {
+
     .content{
         margin-top: 5rem;
     }
@@ -199,6 +217,10 @@ main {
         padding-bottom: 0.7rem;
     }
 
+    .map-a{
+        display: none;
+    }
+
     .row1 {
         margin-top: 1rem;
     }
@@ -207,8 +229,18 @@ main {
         width: 20px;
     }
 
+    .row1, .row2, .row3 {
+        gap: 0.3rem;
+        margin-bottom: 0.3rem;
+    }
+
+    .row3{
+        margin-bottom: 0;
+    }
+
     .bajo {
         padding-top: 0;
+        padding-bottom: 0.5rem;
     }
 
     .content h2 {
@@ -218,6 +250,18 @@ main {
 
     .botones img {
         max-width: 15px;
+    }
+
+    .botones a{
+        margin-right: 0.3rem;
+    }
+
+    .botones a:last-child{
+        margin-right: 0;
+    }
+
+    .accion button{
+        font-size: 0.4rem;
     }
 }
 
