--- a/style/main.css
+++ b/style/main.css
@@ -11,25 +11,41 @@ main {
     max-width: 50rem;
 }
 
-.arriva {
+.upper {
     padding: 1rem;
     display: flex;
 }
 
-.arriva h3{
-    margin-bottom: 1rem;
+.upper-left {        
+    width: 70%;      
+    margin-right: 1rem;
+    position: relative;
+    display: inline-block;
 }
 
 .imagen {
+    width: 100%;          
+    max-width: 500px;     
     border: 2px solid #ccc;
-    margin-right: 1rem;
-    max-width: 500px;
-    height: 70%;
-    width: 70%;
+    display: block;       
 }
 
-.derecho{
-    width: 100%;
+.monster {
+    position: absolute;       
+    top: 50%;                  
+    left: 50%;                 
+    transform: translate(-50%, -50%); 
+    width: 100px;              
+    height: auto;              
+    pointer-events: none;      
+}
+
+.upper-right{
+    width: 30%;
+}
+
+.upper h3{
+    margin-bottom: 1rem;
 }
 
 .ficha{
@@ -50,7 +66,40 @@ main {
     max-width: 100px;
 }
 
-.controladores {
+.middle {
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.middle-left{
+    width: 70%;
+    max-width: 500px;
+    margin-right: 1rem;
+}
+
+.middle h2 {
+    margin-bottom: 1rem;
+}
+
+.middle textarea {
+    font-family: "Press Start 2P", system-ui;
+    width: 100%;
+    height: 80px;        
+    font-size: 0.6rem;
+    background-color: #FFEA79; 
+    border: 2px solid #ccc; /* ponemos un borde  */
+    border-radius: 4px;
+    padding: 0.5rem;
+    resize: none;        
+    overflow-y: auto;      
+}
+
+.middle-right{
+    width: 30%;
+}
+
+.controllers {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -92,39 +141,7 @@ main {
     display: block;
 }
 
-.bajo {
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
-}
-
-.bajo-left{
-    width: 70%;
-    max-width: 500px;
-}
-
-.bajo-right{
-    width: 32%;
-}
-
-.bajo h2 {
-    margin-bottom: 1rem;
-}
-
-.bajo textarea {
-    font-family: "Press Start 2P", system-ui;
-    width: 100%;
-    height: 80px;        
-    font-size: 0.6rem;
-    background-color: #FFEA79; 
-    border: 2px solid #ccc; /* ponemos un borde  */
-    border-radius: 4px;
-    padding: 0.5rem;
-    resize: none;        
-    overflow-y: auto;      
-}
-
-.botones{
+.down{
     padding: 1rem;
     padding-top: 0;
     display: flex;
@@ -132,25 +149,26 @@ main {
     align-items: center;
 }
 
-.botones-left{
+.down-left{
     display: flex;
     width: 70%;
     max-width: 500px;
+    margin-right: 1rem;
 }
 
-.botones-right{
+.down-right{
     display: flex;
     justify-content: center;
-    width: 32%;
+    width: 30%;
 }
 
-.accion {
+.action {
     display: flex;
     justify-content: start;
     gap: 0.6rem;
 }
 
-.accion button {
+.action button {
     font-family: "Press Start 2P", system-ui;
     color: #333;
     border-radius: 4px;
@@ -162,11 +180,11 @@ main {
 }
 
 
-.accion button:last-child{
+.action button:last-child{
     margin-right: 0; /* quitamos el margen para el ultimo boton  */
 }
 
-.accion button:hover {
+.action button:hover {
     border: 2px solid #333; /* ponemos un borde con un color diferente */
 }
 
@@ -175,15 +193,15 @@ main {
     justify-content: space-between;
 }
 
-.botones a{
+.down a{
     margin-right: 0.5rem;
 }
 
-.botones a:last-child{
+.down a:last-child{
     margin-right: 0;
 }
 
-.botones img {
+.down img {
     max-width: 25px;
 }
 
@@ -205,16 +223,21 @@ main {
         margin-top: 5rem;
     }
 
-    .derecho h3{
+    .content h2 {
+        font-size: 0.9rem;
+        margin-bottom: 0.3rem;
+    }
+
+    .upper {
+        padding-bottom: 0.7rem;
+    }
+
+    .upper-right h3{
         font-size: 0.9rem;
     }
 
     .ficha p{
         font-size: 0.6rem;
-    }
-
-    .arriva {
-        padding-bottom: 0.7rem;
     }
 
     .map-a{
@@ -225,7 +248,12 @@ main {
         margin-top: 1rem;
     }
 
-    .controladores img {
+    .middle {
+        padding-top: 0;
+        padding-bottom: 0.5rem;
+    }
+
+    .controllers img {
         width: 20px;
     }
 
@@ -238,29 +266,19 @@ main {
         margin-bottom: 0;
     }
 
-    .bajo {
-        padding-top: 0;
-        padding-bottom: 0.5rem;
-    }
-
-    .content h2 {
-        font-size: 0.9rem;
-        margin-bottom: 0.3rem;
-    }
-
-    .botones img {
+    .down img {
         max-width: 15px;
     }
 
-    .botones a{
+    .down a{
         margin-right: 0.3rem;
     }
 
-    .botones a:last-child{
+    .down a:last-child{
         margin-right: 0;
     }
 
-    .accion button{
+    .action button{
         font-size: 0.4rem;
     }
 }
